Base structuring contd

--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,1 +1,13 @@
-Editor
+<div class="row editor-top">
+  <div class="col-md-3 editor-top-col"> First list </div>
+  <div class="col-md-3 editor-top-col"> Second list </div>
+  <div class="col-md-6 editor-top-col"> Some rdf view </div>
+</div>
+<div class="row editor-bottom">
+  <div class="col-md-9">
+    Relational table
+  </div>
+  <div class="col-md-3">
+    Property list
+  </div>
+</div>
