GUI Prototype work

--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,13 +1,28 @@
-<div class="row editor-top">
-  <div class="col-md-3 editor-top-col"> First list </div>
-  <div class="col-md-3 editor-top-col"> Second list </div>
-  <div class="col-md-6 editor-top-col"> Some rdf view </div>
+<div class="row editor-rdf-title">
+  <div class="col-md-12">
+    <h3> Semantic Data Source </h3>
+  </div>
 </div>
-<div class="row editor-bottom">
-  <div class="col-md-9">
-    Relational table
+
+<div class="row editor-rdf-titles">
+  <div class="col-md-3"> <h5> RDF Entities </h5> </div>
+  <div class="col-md-3"> <h5> RDF Attributes </h5> </div>
+  <div class="col-md-6"> <h5> Something else </h5> </div>
+</div>
+
+<div class="row editor-rdf">
+  <div class="col-md-3 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
+  <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div>
+  <div class="col-md-6 editor-rdf-col editor-rtf-panel-container"> Some rdf panel </div>
+</div>
+
+<div class="row editor-relational-title">
+  <div class="col-md-12"> 
+    <h3> Relational Data Source </h3>
   </div>
-  <div class="col-md-3">
-    Property list
-  </div>
+</div>
+
+<div class="row editor-relational">
+  <div class="col-md-3 editor-table-list-container"> List of created tables </div>
+  <div class="col-md-9 editor-table-container"> Relational table </div>
 </div>
