--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -5,15 +5,14 @@
 </div>
 
 <div class="row editor-rdf-titles">
-  <div class="col-md-3"> <h5> RDF Entities </h5> </div>
+  <div class="col-md-3"> <h5> RDF Resources </h5> </div>
   <div class="col-md-3"> <h5> RDF Attributes </h5> </div>
-  <div class="col-md-6"> <h5> Something else </h5> </div>
 </div>
 
 <div class="row editor-rdf">
   <div class="col-md-3 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
   <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div>
-  <div class="col-md-6 editor-rdf-col editor-rtf-panel-container"> Some rdf panel </div>
+  <div class="col-md-6 editor-rdf-col editor-rdf-panel-container"> Some rdf panel </div>
 </div>
 
 <div class="row editor-relational-title">
