--- a/assets/scss/_modules.scss
+++ b/assets/scss/_modules.scss
@@ -10,3 +10,27 @@
     }
   }
 }
+
+.dialog-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.4);
+  z-index: 1031;
+  @include display-box;
+  @include box-align(center);
+  @include box-pack(center);
+  
+  .dialog {
+    max-width: 50%;
+    max-height: 50%;
+    .dialog-body {
+      overflow: auto;
+    }
+    .dialog-footer {
+      text-align: right;
+    }
+  }
+}
