--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -1,41 +1,34 @@
 <div class="row row-offcanvas row-offcanvas-right">
-  <div class="col-xs-12 col-sm-9">
+  <div class="col-xs-12 col-sm-12">
     <p class="pull-right visible-xs">
       <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
     </p>
     <div class="jumbotron">
       <h1> The Relsem Bridge</h1>
-      <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+      <p> Query semantic data source as relational SQL database. </p>
     </div>
     <div class="row">
-      <div class="col-6 col-sm-6 col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
-      </div><!--/span-->
-      <div class="col-6 col-sm-6 col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
-      </div><!--/span-->
-    </div><!--/row-->
-  </div><!--/span-->
-
-  <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-    <div class="well sidebar-nav">
-      <ul class="nav">
-        <li>Sidebar</li>
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li>Sidebar</li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li>Sidebar</li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-    </div><!--/.well -->
-  </div><!--/span-->
-</div><!--/row-->
+      <div class="col-6 col-sm-8 col-lg-6">
+        <h3> Connection to semantic data source </h3>
+        <form class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-sm-2 control-label"> Connection </label>
+            <div class="col-sm-10"> <input type="text" class="form-control in-login-name" placeholder="Connection name ..."> </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label"> Endpoint </label>
+            <div class="col-sm-10"> <input type="text" class="form-control in-login-endpoint" placeholder="SPARQL Endpoint URL ..."> </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10"> 
+              <button type="button" class="btn btn-default btn-connect">
+                Connect 
+              </button> 
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-6 col-sm-4 col-lg-6"> &nbsp; </div>
+    </div>
+  </div>
+</div>
