--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,16 +1,27 @@
-<div class="row editor-rdf-title">
+<div class="row">
+  <div class="col-12 editor-title editor-connection-title"> 
+    <h3> Connection to semantic data source </h3> 
+  </div> 
+</div>
+
+<div class="row">
+  <div class="col-6 col-sm-8 col-lg-6 editor-connection-form"> </div>
+  <div class="col-6 col-sm-4 col-lg-6"> &nbsp; </div>
+</div>
+
+<div class="row editor-title editor-rdf-title">
   <div class="col-md-12">
     <h3> Semantic Data Source </h3>
   </div>
 </div>
 
 <div class="row editor-rdf">
-  <div class="col-md-3 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
-  <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div>
-  <div class="col-md-6 editor-rdf-col editor-rdf-panel-container"> Some rdf panel </div>
+  <div class="col-md-5 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
+  <!-- <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div> -->
+  <div class="col-md-7 editor-rdf-col editor-rdf-panel-container"> Some rdf panel </div>
 </div>
 
-<div class="row editor-relational-title">
+<div class="row editor-title editor-relational-title">
   <div class="col-md-12"> 
     <h3> Relational Data Source </h3>
   </div>
