--- a/app/templates/editor/rdf-entity-list.html
+++ b/app/templates/editor/rdf-entity-list.html
@@ -1,19 +1,7 @@
 <h5> RDF Resources </h5>
-<div class="list-item rdf-entity-list-item">
-  Item 1
-</div>
-<div class="list-item rdf-entity-list-item">
-  Item 2
-</div>
-<div class="list-item rdf-entity-list-item">
-  Item 3
-</div>
-<div class="list-item rdf-entity-list-item">
-  Item 4
-</div>
-<div class="list-item rdf-entity-list-item">
-  Item 5
-</div>
-<div class="list-item rdf-entity-list-item">
-  Item 6
-</div>
+<div class="list-item rdf-entity-list-item"> Place <a> http://dbpedia.org/ontology/Place </a> </div>
+<div class="list-item rdf-entity-list-item selected"> Organization <a> http://schema.org/Organization </a> </div>
+<div class="list-item rdf-entity-list-item"> Person <a> http://dbpedia.org/ontology/Person </a> </div>
+<div class="list-item rdf-entity-list-item"> Thing <a> http://www.w3.org/2002/07/owl#Thing </a> </div>
+<div class="list-item rdf-entity-list-item"> President <a> http://dbpedia.org/ontology/President </a> </div>
+<div class="list-item rdf-entity-list-item"> Band <a> http://dbpedia.org/ontology/Band </a> </div>
