--- a/app/templates/editor/table-list.html
+++ b/app/templates/editor/table-list.html
@@ -1,12 +1,4 @@
-<div class="list-item table-list-item">
-  User
-</div>
-<div class="list-item table-list-item">
-  Account
-</div>
-<div class="list-item table-list-item">
-  Invoice
-</div>
-<div class="list-item table-list-item">
-  Genre
-</div>
+<div class="list-item table-list-item selected"> User </div>
+<div class="list-item table-list-item"> Video </div>
+<div class="list-item table-list-item"> Music </div>
+<div class="list-item table-list-item"> Genre </div>
