--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -9,20 +9,20 @@
     </div>
     <div class="row">
       <div class="col-6 col-sm-8 col-lg-6">
-        <h3> Connection to semantic data source </h3>
+        <h3> Manager Login </h3>
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label class="col-sm-2 control-label"> Connection </label>
-            <div class="col-sm-10"> <input type="text" class="form-control in-login-name" placeholder="Connection name ..."> </div>
+            <label class="col-sm-2 control-label"> Username </label>
+            <div class="col-sm-10"> <input type="text" class="form-control in-login-username" placeholder="Username..."> </div>
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label"> Endpoint </label>
-            <div class="col-sm-10"> <input type="text" class="form-control in-login-endpoint" placeholder="SPARQL Endpoint URL ..."> </div>
+            <label class="col-sm-2 control-label"> Password </label>
+            <div class="col-sm-10"> <input type="password" class="form-control in-login-password" placeholder="Password..."> </div>
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10"> 
-              <button type="button" class="btn btn-default btn-connect">
-                Connect 
+              <button type="button" class="btn btn-default btn-login">
+                Login 
               </button> 
             </div>
           </div>
