--- a/app/templates/editor/connection-form.html
+++ b/app/templates/editor/connection-form.html
@@ -1,14 +1,14 @@
 <form class="form-horizontal" role="form">
   <div class="form-group">
-    <label class="col-sm-2 control-label"> Connection </label>
-    <div class="col-sm-10"> <input type="text" class="form-control in-connection-name" value="Dbpedia" placeholder="Connection name ..."> </div>
-  </div>
-  <div class="form-group">
-    <label class="col-sm-2 control-label"> Endpoint </label>
-    <div class="col-sm-8"> 
+    <label class="col-sm-1 control-label"> Connection </label>
+    <div class="col-sm-4"> 
+      <input type="text" class="form-control in-connection-name" value="Dbpedia" placeholder="Connection name ..."> 
+    </div>
+    <label class="col-sm-1 control-label"> Endpoint </label>
+    <div class="col-sm-4"> 
       <input type="text" class="form-control in-connection-endpoint" value="http://dbpedia.org/sparql?" placeholder="SPARQL Endpoint URL ..."> 
     </div>
-    <div class="col-sm-2">       
+    <div class="col-2">       
       <button type="button" class="btn btn-default btn-connect"> Connect </button> 
     </div>
   </div>
