--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -5,12 +5,11 @@
 </div>
 
 <div class="row">
-  <div class="col-6 col-sm-8 col-lg-6 editor-connection-form"> </div>
-  <div class="col-6 col-sm-4 col-lg-6"> &nbsp; </div>
+  <div class="col-12 editor-connection-form"> </div>
 </div>
 
 <div class="row editor-title editor-rdf-title">
-  <div class="col-md-12">
+  <div class="col-md-16">
     <h3> Semantic Data Source </h3>
   </div>
 </div>
