--- a/app/templates/editor/table.html
+++ b/app/templates/editor/table.html
@@ -14,23 +14,9 @@
           <th> Not Null </th>
           <th> Default </th>
         </tr>
-        <tr>
-          <td> Email </td>
-          <td> String </td>
-          <td> 255 </td>
-          <td> <input type="checkbox" checked/> </td>
-          <td> </td>
-        </tr>
-        <tr>
-          <td> Name </td>
-          <td> String </td>
-          <td> 100 </td>
-          <td> <input type="checkbox"/> </td>
-          <td> User Name </td>
-        </tr>
-        <tr>
+        <tr class="row-new-attribute">
           <td colspan="5"> 
-            <button type="button" class="btn btn-default"> Add new attribute </button> 
+            <button type="button" class="btn btn-default btn-add-attribute"> Add new attribute </button> 
           </td>
         </tr>
       </table>
