--- a/app/templates/editor/rdf-attribute-list.html
+++ b/app/templates/editor/rdf-attribute-list.html
@@ -1,19 +1,14 @@
-<h5> RDF Attributes </h5>
-<div class="list-item rdf-attribute-list-item">
-  Item 1
-</div>
-<div class="list-item rdf-attribute-list-item">
-  Item 2
-</div>
-<div class="list-item rdf-attribute-list-item">
-  Item 3
-</div>
-<div class="list-item rdf-attribute-list-item">
-  Item 4
-</div>
-<div class="list-item rdf-attribute-list-item">
-  Item 5
-</div>
-<div class="list-item rdf-attribute-list-item">
-  Item 6
-</div>
+<div class="list-item rdf-attribute-list-item"> Attribute 1 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 2 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 3 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 4 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 5 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 6 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 7 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 1 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 2 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 3 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 4 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 5 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 6 </div>
+<div class="list-item rdf-attribute-list-item"> Attribute 7 </div>
