--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,32 +1,31 @@
 <div class="row">
-  <div class="col-12 editor-title editor-connection-title"> 
+  <div class="col-xs-12 editor-title editor-connection-title"> 
     <h3> Connection to semantic data source </h3> 
   </div> 
 </div>
 
 <div class="row">
-  <div class="col-12 editor-connection-form"> </div>
+  <div class="col-xs-12 editor-connection-form"> </div>
 </div>
 
 <div class="row editor-title editor-rdf-title">
-  <div class="col-md-16">
+  <div class="col-xs-12 col-">
     <h3> Semantic Data Source </h3>
   </div>
 </div>
 
 <div class="row editor-rdf">
-  <div class="col-md-5 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
-  <!-- <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div> -->
-  <div class="col-md-7 editor-rdf-col editor-rdf-panel-container"> Some rdf panel </div>
+  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
+  <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div>
 </div>
 
 <div class="row editor-title editor-relational-title">
-  <div class="col-md-12"> 
+  <div class="col-xs-12"> 
     <h3> Relational Data Source </h3>
   </div>
 </div>
 
 <div class="row editor-relational">
-  <div class="col-md-3 editor-table-list-container"> List of created tables </div>
-  <div class="col-md-9 editor-table-container"> Relational table </div>
+  <div class="col-xs-3 editor-table-list-container"> List of created tables </div>
+  <div class="col-xs-9 editor-table-container"> Relational table </div>
 </div>
