jquery ui, entity list, attribute list, draggables, connection

--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,31 +1,37 @@
-<div class="row">
-  <div class="col-xs-12 editor-title editor-connection-title"> 
-    <h3> Connection to semantic data source </h3> 
+<div class="row editor-title editor-connection-title">
+  <div class="col-xs-12"> 
+    <h4> Connection to semantic data source </h4> 
   </div> 
 </div>
 
-<div class="row">
+<div class="row editor-connection">
   <div class="col-xs-12 editor-connection-form"> </div>
 </div>
 
 <div class="row editor-title editor-rdf-title">
-  <div class="col-xs-12 col-">
-    <h3> Semantic Data Source </h3>
+  <div class="col-xs-12">
+    <h4> Semantic Data Source </h4>
   </div>
 </div>
 
-<div class="row editor-rdf">
-  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list-container"> List of rdf entities </div>
-  <div class="col-md-3 editor-rdf-col editor-rdf-attribute-list-container"> List of attributes </div>
+<div class="row editor-rdf collapsed">
+  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list"> 
+    <h6> List of rdf entities </h6>
+    <div class="editor-rdf-entity-list-container"></div>
+  </div>
+  <div class="col-xs-8 editor-rdf-col editor-rdf-attribute-list"> 
+    <h6> List of rdf attributes </h6> 
+    <div class="editor-rdf-attribute-list-container"> </div>
+  </div>
 </div>
 
 <div class="row editor-title editor-relational-title">
   <div class="col-xs-12"> 
-    <h3> Relational Data Source </h3>
+    <h4> Relational Data Source </h4>
   </div>
 </div>
 
-<div class="row editor-relational">
+<div class="row editor-relational collapsed">
   <div class="col-xs-3 editor-table-list-container"> List of created tables </div>
   <div class="col-xs-9 editor-table-container"> Relational table </div>
 </div>
