--- a/app/templates/editor/connection-form.html
+++ b/app/templates/editor/connection-form.html
@@ -1,9 +1,9 @@
 
-<label class="col-xs-12 col-sm-3"> 
+<label class="col-xs-12 col-sm-3 col-md-2"> 
   Select Connection 
 </label>
 
-<div class="col-xs-12 col-sm-6">
+<div class="col-xs-12 col-sm-6 col-md-8">
   <select class="connection-select">
   </select>
 </div>
@@ -16,7 +16,7 @@
   <input type="text" class="form-control in-connection-endpoint" value="http://dbpedia.org/sparql?" placeholder="SPARQL Endpoint URL ..."> 
 </div-->
 
-<div class="col-xs-12 col-sm-3">       
+<div class="col-xs-12 col-sm-3 col-md-2">       
   <button type="button" class="btn btn-default btn-connect"> Connect </button> 
 </div>
 
