--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div class="row editor-rdf collapsed">
+<div class="row editor-rdf" style="display:none">
   <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list"> 
     <h6> List of rdf entities </h6>
     <div class="editor-rdf-entity-list-container"></div>
