--- a/app/templates/editor/table-row.html
+++ b/app/templates/editor/table-row.html
@@ -1,30 +1,25 @@
 <td> 
-  <div class="input">
-    <input type="text" class="form-control in-name" value="<%= attribute.name %>" placeholder="Attribute name"/>
+  <div class="input-container">
+    <input type="text" name="name" class="form-control input in-name" value="<%= attribute.name %>" placeholder="Attribute name"/>
   </div>
 </td>
 <td>
-  <div class="input">
-    <select class="in-type">
-      <option> Datetime </option>
-      <option> Decimal </option>
-      <option> Integer </option>
-      <option> String </option>
-    </select>
+  <div class="input-container">
+    <select class="input in-type" name="type"></select>
   </div>
 </td>
 <td> 
-  <div class="input">
-    <input type="text" class="form-control in-length" value="<%= attribute.length %>" placeholder="Length"/>
+  <div class="input-container">
+    <input type="text" name="length" class="form-control input in-length" value="<%= attribute.length %>" placeholder="Length"/>
   </div>
 </td>
 <td>
-  <div class="input">
-    <input type="checkbox"/>
+  <div class="input-container">
+    <input type="checkbox" name="notnull" class="input in-notnull" <%= !attribute.notnull ? 'checked' : '' %>/>
   </div>
 </td>
 <td> 
-  <div class="input">
-    <input type="text" class="form-control in-default" value="<%= attribute.default %>" placeholder="Default"/>
+  <div class="input-container">
+    <input type="text" name="default" class="form-control input in-default" value="<%= attribute.default %>" placeholder="Default"/>
   </div>
 </td>
