--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -15,3 +15,13 @@
     padding: 20px;
   }
 }
+
+.load-mask {
+  @include stretch(0,0,0,0);
+  min-height: 32px;
+  background-color: rgba(255,255,255,0.5);
+  background-image: url(../images/loader.gif);
+  background-size: 22px;
+  background-position: 50% 5px;
+  background-repeat: no-repeat;
+}
