--- a/app/templates/editor/table.html
+++ b/app/templates/editor/table.html
@@ -23,7 +23,7 @@
         </tr>
         <tr class="row-new-attribute">
           <td colspan="5">
-            Drop rdf attributes here
+            ... drag and drop rdf attributes here ...
           </td>
         </tr>
       </table>
