--- a/app/templates/home/about.html
+++ b/app/templates/home/about.html
@@ -1,1 +1,21 @@
-About Us
+<h1> About Relsem Bridge </h1>
+
+<h3> Introduction </h3>
+
+<p>Relsem Bridge is the project proposed by the organization Ericsson Nikola Tesla as a partner on the DSD course, a cooperation between universities UNIZG-FER, POLIMI and MDH. Project customer is the Ericsson Nikola Tesla company. </p>
+
+<p> Ericsson Nikola Tesla d.d. is the Croatian affiliate of the Swedish telecommunications equipment manufacturer Ericsson. The company is named after the inventor Nikola Tesla and is the largest specialized provider of modern telecommunications products, solutions and services in central and eastern Europe. Our work belows to the research section of the company, which is represented by Vedran Galetić and Vanja Smailović. </p>
+
+<p>This project was born by the necessity of using relational databases tools to access semantic data collected by Ericsson, but it’s not the only company affected with this problem. 95% of the actual database software is relational, so our project could be an approach to help another companies with the same troubles.</p>
+
+<p>
+The problems this project is looking to solve are centralised, standard representation and access to multiple heterogenous data sources, a problem project customer is facing on a daily basis. Initial plan is to utilize only the semantic source, but to construct abstractions in such way to enable later usage of other forms of data sources. </p>
+
+<h3> Background </h3>
+<p>
+  Large amount of user data is aggregated from the telecommunication network into a single semantic graph to enable extracting current and even new knowledge. While this approach is beneficial in mentioned use-case, it requires the users of the system to implement, for this purpose, rarely used and complex interfaces in order to obtain data. Other than semantic, data is consolidated into multiple, physically distributed, heterogeneous systems.
+  In order for data to be able to support business decisions, it needs to be available to various analytics tools via standardized interfaces. Since majority of commercially available analytical tools rely on relational model, proposed federation tool needs to provide common, federated relational view of all available data sources. 
+</p>
+<p>
+  The objective of the customer is to create a platform that will gather data from various sources available to telecom operators to provide a semantic structure for this data and to enable reasoning with it, so the operators could create new products, marketing plans, etc. The final goal of Ericsson is maximizing the revenue potential from available data by institutionalizing the capture, storage, analysis, effective dissemination, and application of that data.
+</p>
