--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,10 +1,11 @@
 <div class="row editor-title editor-connection-title">
-  <div class="col-xs-12"> 
-    <h4> Connection to semantic data source </h4> 
-  </div> 
+  <div class="col-xs-12">
+    <h4> Connection to semantic data source </h4>
+  </div>
+  <img class="collapse-arrow collapsed" src="assets/images/arrow_down.png">
 </div>
 
-<div class="row editor-connection">
+<div class="row editor-connection collapsed">
   <div class="col-xs-12 editor-connection-form"> </div>
 </div>
 
@@ -12,23 +13,25 @@
   <div class="col-xs-12">
     <h4> Semantic Data Source </h4>
   </div>
+  <img class="collapse-arrow collapsed" src="assets/images/arrow_down.png">
 </div>
 
 <div class="row editor-rdf" style="display:none">
-  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list"> 
+  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list">
     <h6> List of rdf entities </h6>
     <div class="editor-rdf-entity-list-container"></div>
   </div>
-  <div class="col-xs-8 editor-rdf-col editor-rdf-attribute-list"> 
-    <h6> List of rdf attributes </h6> 
+  <div class="col-xs-8 editor-rdf-col editor-rdf-attribute-list">
+    <h6> List of rdf attributes </h6>
     <div class="editor-rdf-attribute-list-container"> </div>
   </div>
 </div>
 
 <div class="row editor-title editor-relational-title">
-  <div class="col-xs-12"> 
+  <div class="col-xs-12">
     <h4> Relational Data Source </h4>
   </div>
+  <img class="collapse-arrow collapsed" src="assets/images/arrow_down.png">
 </div>
 
 <div class="row editor-relational collapsed">
