Auto adding ID attribute, disabled row remove

--- a/assets/scss/_editor.scss
+++ b/assets/scss/_editor.scss
@@ -184,9 +184,11 @@
       width: 100%;
       tr{
         &:hover {
-          td {
-            .btn-table-row-delete{
-              display: block;
+          &.removable {
+            td {
+              .btn-table-row-delete{
+                display: block;
+              }
             }
           }
         }
