--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -17,12 +17,15 @@
 </div>
 
 <div class="row editor-rdf" style="display:none">
-  <div class="col-xs-4 editor-rdf-col editor-rdf-entity-list">
-    <h6> List of rdf entities </h6>
+  <div class="col-xs-5 editor-rdf-col-title editor-rdf-entity-list-header">
+    <!-- <div class="rdf-entity-parent"> List of rdf entities </div> -->
+    <ul class="entity-breadcrumbs"> </ul>
+  </div>
+  <div class="col-xs-7 editor-rdf-col-title editor-rdf-attribute-list-header"> List of rdf attributes </div>
+  <div class="col-xs-5 editor-rdf-col editor-rdf-entity-list">
     <div class="editor-rdf-entity-list-container"></div>
   </div>
-  <div class="col-xs-8 editor-rdf-col editor-rdf-attribute-list">
-    <h6> List of rdf attributes </h6>
+  <div class="col-xs-7 editor-rdf-col editor-rdf-attribute-list">
     <div class="editor-rdf-attribute-list-container"> </div>
   </div>
 </div>
