--- a/assets/scss/_editor.scss
+++ b/assets/scss/_editor.scss
@@ -7,13 +7,37 @@
   }
 
   .editor-rdf {
-    padding: 10px 0;
+    padding: 0 0 10px 0;
     height: 250px;
     margin-bottom: 20px;
     border-bottom: 1px solid #ccc;
+    overflow: hidden;
+
+    .entity-breadcrumbs {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      .entity-breadcrumb {
+        display: inline-block;
+        margin: 0 4px;
+        cursor: pointer;
+        color: #55c;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      .breadcrumb-divider {
+        width: 5px;
+        margin-bottom: 2px;
+      }
+    }
+
+    .editor-rdf-col-title {
+      height: 40px;
+    }
 
     .editor-rdf-entity-list, .editor-rdf-attribute-list {
-      height: 100%;
+      height: 90%;
       overflow: auto;
     }
   }
@@ -46,8 +70,8 @@
   .collapse-arrow {
     position: absolute;
     width: 12px;
-    top: 25px;
-    right: 5px;
+    top: 20px;
+    right: 10px;
     @include transform(rotate(-90deg));
     @include transition(all 400ms);
     &.collapsed {
